<resources>
    <string name="app_name">Мой ФизТех</string>
    <string name="auth">Авторизация</string>
    <string name="hint_username">Эл. почта</string>
    <string name="hint_password">Пароль</string>
    <string name="entry">Войти</string>
    <string name="reg">Регистрация</string>
    <string name="reg2">Зарегистрироваться</string>
    <string name="name_surname">Мария Жукова</string>
    <string name="hint_nickname">Никнейм</string>
    <string name="hint_password_repeat">Повторение пароля</string>
    <string name="hint_number">Номер телефона</string>
    <string name="password_forget">Забыли пароль?</string>
    <string name="my_account">Мой аккаунт</string>
    <string name="group_text">Группа: 825</string>
    <string name="email">Rogozheva.AM@phystech.edu</string>
    <string name="your_notes">Твои заметки</string>
    <string name="plus">Добавить заметку</string>
    <string name="add_title">Задача</string>
    <string name="save_btn">Сохранить</string>
    <string name="del_btn">Удалить</string>
    <string name="modif_btn">Изменить</string>
    <string name="modif_title">Изменить задачу</string>
    <string name="completed">Выполнено</string>
    <string name="waiting">Ожидание</string>
    <string name="task">Задача</string>
    <string name="detail">Детали</string>
    <string name="deadline">Дата выполнения</string>
    <string name="done">Сделано!</string>
    <string name="required">Необходимо заполнить!</string>
    <string name="sure">Вы уверены?</string>
    <string name="ok">Да</string>
    <string name="cancel">Отмена</string>
    <string name="app">App</string>
    <string name="n_0">0</string>
    <string name="n_1">1</string>
    <string name="n_2">2</string>
    <string name="n_3">3</string>
    <string name="n_4">4</string>
    <string name="n_5">5</string>
    <string name="n_6">6</string>
    <string name="n_7">7</string>
    <string name="n_8">8</string>
    <string name="n_9">9</string>
    <string name="exit">Выйти</string>
    <string name="Mo">Пн</string>
    <string name="Tu">Вт</string>
    <string name="We">Ср</string>
    <string name="Th">Чт</string>
    <string name="Fr">Пт</string>
    <string name="Sa">Сб</string>
    <string name="Su">Вс</string>
</resources>
