<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <View
        android:id="@+id/ellipse_1"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"

        android:layout_marginStart="107dp"
        android:layout_marginEnd="240dp"

        android:layout_marginTop="274dp"
        android:layout_marginBottom="519dp"
        android:background="@drawable/ellipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ellipse_2"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="274dp"
        android:layout_marginBottom="519dp"

        android:layout_marginStart="150dp"
        android:layout_marginEnd="197dp"

        android:background="@drawable/ellipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ellipse_3"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="274dp"

        android:layout_marginStart="194dp"
        android:layout_marginEnd="153dp"

        android:layout_marginBottom="519dp"
        android:background="@drawable/ellipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/ellipse_4"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="274dp"

        android:layout_marginStart="237dp"
        android:layout_marginEnd="110dp"

        android:layout_marginBottom="519dp"
        android:background="@drawable/ellipse"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/logo2view"
        android:layout_width="200dp"
        android:layout_height="85dp"
        android:layout_marginStart="36dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/app"
        app:srcCompat="@drawable/logo2" />

    <ImageView
        android:id="@+id/logo1view"
        android:layout_width="106dp"
        android:layout_height="81dp"
        android:layout_marginStart="276dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <TextView
        android:id="@+id/app"
        android:layout_width="89dp"
        android:layout_height="29dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="128dp"
        android:layout_marginBottom="696dp"
        android:gravity="center_horizontal|top"
        android:text="@string/app"
        android:textAppearance="@style/app"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/some_id"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="116dp"
        android:layout_marginBottom="8dp"
        android:gravity="center_horizontal|top"
        android:text="Мария Жукова"
        android:textAppearance="@style/some_id"
        app:layout_constraintBottom_toTopOf="@+id/ellipse_1"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="420dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n_1"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="left"
                android:layout_marginStart="40dp"
                android:backgroundTint="@color/colorText"
                android:text="@string/n_1"
                android:textAppearance="@style/some_id"
                android:textColor="@color/colorBlack"
                android:textSize="40sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n_2"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorText"
                android:text="@string/n_2"
                android:textAppearance="@style/some_id"
                android:textColor="@color/colorBlack"
                android:textSize="40sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n_3"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="right"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/colorText"
                android:text="@string/n_3"
                android:textAppearance="@style/some_id"
                android:textColor="@color/colorBlack"
                android:textSize="40sp"></com.google.android.material.button.MaterialButton>
        </FrameLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n_4"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="left"
                android:layout_marginStart="40dp"
                android:backgroundTint="@color/colorText"
                android:text="@string/n_4"
                android:textAppearance="@style/some_id"
                android:textColor="@color/colorBlack"
                android:textSize="40sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n_5"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorText"
                android:text="@string/n_5"
                android:textAppearance="@style/some_id"
                android:textColor="@color/colorBlack"
                android:textSize="40sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n_6"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="right"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/colorText"
                android:text="@string/n_6"
                android:textAppearance="@style/some_id"
                android:textColor="@color/colorBlack"
                android:textSize="40sp"></com.google.android.material.button.MaterialButton>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n_7"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="left"
                android:layout_marginStart="40dp"
                android:backgroundTint="@color/colorText"
                android:text="@string/n_7"
                android:textAppearance="@style/some_id"
                android:textColor="@color/colorBlack"
                android:textSize="40sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n_8"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorText"
                android:text="@string/n_8"
                android:textAppearance="@style/some_id"
                android:textColor="@color/colorBlack"
                android:textSize="40sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n_9"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="right"
                android:layout_marginEnd="40dp"
                android:backgroundTint="@color/colorText"
                android:text="@string/n_9"
                android:textAppearance="@style/some_id"
                android:textColor="@color/colorBlack"
                android:textSize="40sp"></com.google.android.material.button.MaterialButton>
        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/exit"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_gravity="left"
                android:layout_marginStart="40dp"
                android:backgroundTint="@color/colorText"
                android:text="@string/exit"
                android:textAppearance="@style/app"
                android:textColor="@color/colorBlack"
                android:textSize="30sp"></com.google.android.material.button.MaterialButton>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/n_0"
                style="@style/Widget.MaterialComponents.Button.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginBottom="45dp"
                android:layout_gravity="center"
                android:backgroundTint="@color/colorText"
                android:text="@string/n_0"
                android:textAppearance="@style/some_id"
                android:textColor="@color/colorBlack"
                android:textSize="40sp"></com.google.android.material.button.MaterialButton>

            <ImageButton
                android:id="@+id/face_id_btn"
                android:layout_width="wrap_content"
                android:layout_height="80dp"
                android:layout_marginRight="40dp"
                android:layout_gravity="right"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@color/colorText"
                android:src="@drawable/face_id">

            </ImageButton>
        </FrameLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>