<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipeContainer"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.cardview.widget.CardView
                android:id="@+id/toolbar_card"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/my_account"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical|center_horizontal"
                    android:text="@string/my_account"
                    android:textColor="@android:color/black"
                    android:textSize="24sp" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/button_notification"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center_vertical"
                    android:src="@drawable/logo_notification"
                    app:backgroundTint="@android:color/white"
                    app:fabSize="normal"
                    app:maxImageSize="24dp" />

                <ImageView
                    android:id="@+id/logo"
                    android:layout_width="56dp"
                    android:layout_height="56dp"
                    android:layout_gravity="center_vertical|end"
                    app:srcCompat="@drawable/logo1"

                    />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/subject_card1"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:layout_marginTop="75dp"
                android:layout_marginEnd="16dp"
                app:cardCornerRadius="180dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.193"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:id="@+id/avatar"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    app:srcCompat="@drawable/avatar" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/name_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="100dp"
                android:gravity="center_horizontal|top"
                android:text="@string/name_surname"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.188"
                app:layout_constraintStart_toEndOf="@+id/subject_card1"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/your_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="false"
                android:layout_marginTop="248dp"
                android:gravity="center_horizontal|top"
                android:text="@string/your_notes"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.054"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="false"
                android:gravity="center_horizontal|top"
                android:text="@string/group_text"
                android:textColor="@android:color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.154"
                app:layout_constraintStart_toEndOf="@+id/subject_card1"
                app:layout_constraintTop_toBottomOf="@+id/name_surname" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="false"
                android:layout_alignParentTop="false"
                android:layout_alignParentEnd="false"
                android:layout_alignParentBottom="false"
                android:gravity="center_horizontal|top"
                android:text="@string/email"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="14sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.508"
                app:layout_constraintStart_toEndOf="@+id/subject_card1"
                app:layout_constraintTop_toBottomOf="@+id/group" />

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/floating_button_add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginTop="68dp"
                android:backgroundTint="@color/colorPrimaryDark"
                android:text="@string/plus"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                android:tint="@color/colorAccent"
                app:fabSize="normal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/your_notes"
                app:layout_constraintTop_toBottomOf="@+id/email"
                app:layout_constraintVertical_bias="0.118" />

            <androidx.cardview.widget.CardView
                android:id="@+id/note_card1"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_marginTop="328dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/type_of_note"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="23dp"
                    android:text="Мероприятие:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/rectangle_1"
                    android:layout_width="13dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="false"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/yellow_rectangle" />

                <TextView
                    android:id="@+id/desc_small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="160dp"
                    android:layout_marginTop="25dp"
                    android:text="Пригласить Сурначеву" />
            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/note_card3"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_marginTop="488dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.47"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/type_of_note3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="Важно:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/rectangle_3"
                    android:layout_width="13dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="false"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/blue_rectangle" />

                <TextView
                    android:id="@+id/desc_small3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="100dp"
                    android:layout_marginTop="12dp"
                    android:text="Документы"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/description3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="40dp"
                    android:text="326 кабинет справки лагеря"
                    android:textSize="12sp" />

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/note_card2"
                android:layout_width="360dp"
                android:layout_height="70dp"
                android:layout_marginTop="408dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.49"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/type_of_note2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="10dp"
                    android:text="Памятка:"
                    android:textColor="@android:color/black"
                    android:textSize="18sp" />

                <View
                    android:id="@+id/gradient"
                    android:layout_width="13dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentTop="false"
                    android:layout_marginTop="0dp"
                    android:background="@drawable/purple_gradient_rectangle" />

                <TextView
                    android:id="@+id/desc_small2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="120dp"
                    android:layout_marginTop="12dp"
                    android:text="Забрать"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="33dp"
                    android:text="Сидоров забрал ручку и не отдал!"
                    android:textSize="12sp" />

                <TextView
                    android:id="@+id/description2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="50dp"
                    android:text="Иванов должен касарь до пятницы, брал на учебники"
                    android:textSize="12sp" />
            </androidx.cardview.widget.CardView>

            <com.google.android.material.bottomnavigation.BottomNavigationView
                android:id="@+id/bottom_navigation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                app:itemIconTint="@drawable/bottom_navigation_item_background_colors"
                app:itemTextColor="@color/colorComplementary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:menu="@menu/menu_bottom_navigation" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>